# vasum

./: .gitignore  API.html  CMakeLists.txt  README  README.md  acceptor_8cpp.html  acceptor_8cpp_source.html  acceptor_8hpp.html  acceptor_8hpp_source.html  add-peer-request_8hpp.html  add-peer-request_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  api_8hpp.html  astylerc  attach-config_8hpp.html  attach-config_8hpp_source.html  attach-helper_8cpp.html  attach-helper_8hpp.html  attach-helper_8hpp_source.html  attach-manager_8cpp.html  attach-manager_8hpp.html  attach-manager_8hpp_source.html  attach_8cpp.html  attach_8hpp.html  attach_8hpp_source.html  backend-file_8cpp.html  backend-file_8hpp.html  backend-file_8hpp_source.html  backend-journal_8cpp.html  backend-journal_8hpp.html  backend-journal_8hpp_source.html  backend-null_8hpp.html  backend-null_8hpp_source.html  backend-persistent-file_8cpp.html  backend-persistent-file_8hpp.html  backend-persistent-file_8hpp_source.html  backend-stderr_8cpp.html  backend-stderr_8hpp.html  (+1764 more)
cli/: CMakeLists.txt  cli-exception.hpp  command-line-interface.cpp  command-line-interface.hpp  main.cpp
cli/support/: vasum-cli-completion.sh.in  vsm-completion.sh.in
client/: CMakeLists.txt  dbus-connection.cpp  dbus-connection.hpp  exception.hpp  host-dbus-connection.cpp  host-dbus-connection.hpp  host-ipc-connection.cpp  host-ipc-connection.hpp  ipc-connection.cpp  ipc-connection.hpp  main.cpp  sc_adt.h  security-containers-client-impl.cpp  security-containers-client-impl.hpp  security-containers-client.cpp  security-containers-client.h  security-containers.pc.in  utils.cpp  utils.hpp  vasum-client-impl.cpp  vasum-client-impl.hpp  vasum-client.cpp  vasum-client.h  vasum-client.pc.in  vasum-wrapper.cpp  vasum.h  vasum.pc.in  vasum_list.h  wrapper-compat.cpp  wrapper-compat.h  zone-dbus-connection.cpp  zone-dbus-connection.hpp
common/: CMakeLists.txt  base-exception.cpp  base-exception.hpp  config.hpp
common/api/: dbus-method-result-builder.hpp  ipc-method-result-builder.cpp  ipc-method-result-builder.hpp  messages.hpp  method-result-builder.hpp
common/config/: configuration.cpp  configuration.hpp  exception.hpp  fdstore.cpp  fields.hpp  from-json-visitor.hpp  from-kvstore-visitor.hpp  fs-utils.cpp  fs-utils.hpp  is-union.hpp  is-visitable.hpp  kvstore.cpp  kvstore.hpp  manager.hpp  to-fdstore-visitor.hpp  to-json-visitor.hpp
common/dbus/: connection.cpp  connection.hpp  exception.hpp
common/epoll/: event-poll.cpp  event-poll.hpp  events.cpp  events.hpp  glib-dispatcher.cpp  glib-dispatcher.hpp  glib-poll-dispatcher.cpp  glib-poll-dispatcher.hpp  thread-dispatcher.cpp  thread-dispatcher.hpp  thread-poll-dispatcher.cpp  thread-poll-dispatcher.hpp
common/ipc/: client.cpp  client.hpp  exception.hpp  ipc-gsource.cpp  ipc-gsource.hpp  method-result.cpp  method-result.hpp  result.hpp  service.cpp  service.hpp  types.cpp  types.hpp
common/launcher/: CMakeLists.txt  launcher.cpp
common/libvirt/: connection.cpp  connection.hpp  domain.cpp  domain.hpp  exception.hpp  helpers.cpp  helpers.hpp  network-filter.cpp  network-filter.hpp  network.cpp  network.hpp
common/log/: backend-journal.cpp  backend-journal.hpp  backend-null.hpp  backend-stderr.cpp  backend-stderr.hpp  backend.hpp  ccolor.cpp  ccolor.hpp  formatter.cpp  formatter.hpp  level.cpp  level.hpp  logger.cpp  logger.hpp
common/logger/: backend-journal.cpp  backend-journal.hpp  backend-stderr.cpp  ccolor.cpp  ccolor.hpp  formatter.cpp  logger.cpp
common/lxc/: cgroup.cpp  cgroup.hpp  domain.cpp  domain.hpp  exception.hpp  zone.cpp  zone.hpp
common/netlink/: netlink-message.cpp  netlink-message.hpp  netlink.cpp  netlink.hpp
common/utils/: c-args.hpp  c-array.hpp  callback-guard.cpp  callback-guard.hpp  callback-wrapper.hpp  ccolor.cpp  ccolor.hpp  channel.cpp  channel.hpp  counting-map.hpp  daemon.cpp  daemon.hpp  environment.cpp  environment.hpp  event-poll.cpp  event-poll.hpp  eventfd.cpp  eventfd.hpp  exception.cpp  exception.hpp  execute.cpp  execute.hpp  fd-utils.cpp  fd-utils.hpp  file-wait.cpp  file-wait.hpp  fs.cpp  fs.hpp  glib-loop.cpp  glib-loop.hpp  glib-poll-dispatcher.cpp  glib-poll-dispatcher.hpp  glib-utils.cpp  glib-utils.hpp  img.cpp  img.hpp  initctl.cpp  initctl.hpp  inotify.cpp  inotify.hpp  (+24 more)
container-daemon/: CMakeLists.txt  daemon-connection.cpp  daemon-connection.hpp  daemon-dbus-definitions.hpp  daemon.cpp  daemon.hpp  exception.hpp  main.cpp  runner.cpp  runner.hpp
container-daemon/configs/: com.samsung.container.daemon.conf  org.tizen.container.daemon.conf  org.tizen.containers.domain.daemon.conf  org.tizen.containers.domain.daemon.conf.in  org.tizen.containers.zone.daemon.conf.in
libs/cargo-json/: CMakeLists.txt  cargo-json.hpp  from-json-visitor.hpp  fs-utils.cpp  fs-utils.hpp  libcargo-json.pc.in  (+1 more)
server/: CMakeLists.txt  common-dbus-definitions.hpp  common-definitions.hpp  container-admin.cpp  container-admin.hpp  container-config.hpp  container-connection-transport.cpp  container-connection-transport.hpp  container-connection.cpp  container-connection.hpp  container-dbus-definitions.hpp  container.cpp  container.hpp  containers-manager-config.hpp  containers-manager.cpp  containers-manager.hpp  dynamic-config-scheme.hpp  exception.hpp  fake-power-manager-dbus-definitions.hpp  host-connection.cpp  host-connection.hpp  host-dbus-connection.cpp  host-dbus-connection.hpp  host-dbus-definitions.hpp  host-ipc-connection.cpp  host-ipc-connection.hpp  host-ipc-definitions.hpp  input-monitor-config.hpp  input-monitor.cpp  input-monitor.hpp  ipc-callback-wrapper.hpp  main.cpp  netdev.cpp  netdev.hpp  network-admin.cpp  network-admin.hpp  provisioning-config.hpp  proxy-call-config.hpp  proxy-call-policy.cpp  proxy-call-policy.hpp  (+18 more)
wrapper/: CMakeLists.txt  vasum.h  vasum.pc.in  vasum_list.h  wrapper-compatibility.cpp  wrapper-compatibility.h  wrapper.cpp
zone-daemon/: CMakeLists.txt  daemon-connection.cpp  daemon-connection.hpp  daemon-dbus-definitions.hpp  daemon.cpp  daemon.hpp  exception.hpp  main.cpp  runner.cpp  runner.hpp
(+2695 files in other folders)
